--- a/local/pressure-washing-cadeby.html
+++ b/local/pressure-washing-cadeby.html
@@ -6,10 +6,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Driveway Pressure Washing Owston Doncaster (Instant online quote)</title>
+<title>Driveway Pressure Washing in Cadeby Doncaster (Instant online quote)</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-cadeby.html">
-<meta name="description" content="Professional pressure washing in Owston Doncaster for driveways, patios, walls, decking, and fencing. Local, insured, and reliable service. Get your instant online quote today and restore your property fast.">
+<meta name="description" content="Professional pressure washing in Cadeby Doncaster for driveways, patios, walls, decking and fencing. Trusted local service with instant online quotes and outstanding results.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
