--- a/test-gut.html
+++ b/test-gut.html
@@ -207,8 +207,8 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <li class="has-submenu">
 <a href="#" class="submenu-toggle">Services</a>
 <ul class="submenu">
-<li><a href="/local/pressure-washing-doncaster.html">Pressure Washing</a></li>
-<li><a href="/guttering-services/doncaster.html">Guttering Services</a></li>
+<li><a href="/local/pressure-washing-???????????????????????.html">Pressure Washing</a></li>
+<li><a href="/guttering-services/?????????????????????.html">Guttering Services</a></li>
 <li><a href="/contact.html">Contact</a></li>
 </ul>
 </li>
